--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <div class="container main-sections-container">
 
             <section id="mercado">
-                <h2 data-i18n="marketTitle">1. Mercado Negro</h2>
+                <h2 data-i18n="marketTitle">1. Compra/Venta de artículos</h2>
                 <div class="controls" style="margin-top: 20px;">
                     <button class="btn-secondary" id="btn-open-upload-item" data-i18n="uploadItemBtn">+ Subir Artículo</button>
                 </div>
@@ -202,7 +202,7 @@
             </section>
             
             <section id="galeria">
-                <h2 data-i18n="galleryTitle">Operaciones (Galería)</h2>
+                <h2 data-i18n="galleryTitle">Obras tácticas terminadas</h2>
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper" id="gallery-wrapper"></div>
                     <div class="swiper-button-next"></div>
