--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tactical Reparations</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="styles.css?v=ultimafinal">
+    <link rel="stylesheet" href="styles.css?v=legal">
 </head>
 <body>
 
@@ -187,7 +187,6 @@
                         <div id="user-dropdown-content" class="dropdown-content">
                             <a href="#" id="btn-menu-profile" data-i18n="profileBtn">Mi Perfil</a>
                             <a href="#" id="btn-menu-config" data-i18n="configBtn">Configuración</a>
-                            <a href="#" id="btn-menu-privacy" data-i18n="privacyMenuBtn">Condiciones de Privacidad</a>
                             <hr style="border:0; border-top:1px solid #333; margin: 5px 0;">
                             <a href="#" id="btn-menu-logout" style="color: #ff4c4c;" data-i18n="logoutBtn">Cerrar Sesión</a>
                         </div>
@@ -246,10 +245,25 @@
             </section>
 
         </div>
-        <footer><div class="container"><p>&copy; 2026 Tactical Reparations.</p></div></footer>
+        
+        <footer>
+            <div class="container">
+                <p>&copy; 2026 Tactical Reparations. Todos los derechos reservados.</p>
+                <div style="margin-top: 15px;">
+                    <a href="#" id="link-footer-privacy" style="color: var(--primary-color); text-decoration: none; font-weight: bold; font-size: 0.9rem;" data-i18n="footerPrivacy">Protocolos de Privacidad y Términos</a>
+                </div>
+                <div style="margin-top: 25px; padding-top: 20px; border-top: 1px solid #222; text-align: left; max-width: 800px; margin-left: auto; margin-right: auto;">
+                    <h4 style="color: var(--text-muted); margin-bottom: 8px; font-size: 0.9rem;" data-i18n="footerCookiesTitle">Uso de Cookies Activo</h4>
+                    <p style="font-size: 0.8rem; color: #666; line-height: 1.5;" data-i18n="footerCookiesInfo">
+                        Nota: Esta plataforma utiliza cookies técnicas de sesión y almacenamiento local (Local Storage) para mantener tu inventario (carrito), procesar las traducciones y recordar tu identificación de Agente de forma encriptada en tu dispositivo. Al continuar navegando, reafirmas la aceptación de estas cookies operativas indispensables. No utilizamos rastreadores publicitarios externos.
+                    </p>
+                </div>
+            </div>
+        </footer>
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="script.js?v=ultimafinal"></script>
+    <script src="script.js?v=legal"></script>
 </body>
 </html>
