--- a/index.html
+++ b/index.html
@@ -95,6 +95,23 @@
         </div>
     </div>
 
+    <div id="history-popup" class="overlay">
+        <div class="popup-box modal-box">
+            <h2 data-i18n="historyMenu" style="margin-bottom: 5px;">Historial</h2>
+            <p style="color: var(--text-muted); font-size: 0.9rem; margin-bottom: 20px;">Tus operaciones en Tactical Reparations.</p>
+            
+            <h3 style="color:var(--primary-color); border-bottom: 1px solid #333; padding-bottom:5px; margin-bottom: 10px;">Mis Compras</h3>
+            <div id="history-purchases" style="background: #111; padding: 15px; border-radius: 4px; color: var(--text-main); font-size: 0.9rem; max-height: 200px; overflow-y: auto; margin-bottom: 20px;">
+                </div>
+            
+            <h3 style="color:var(--primary-color); border-bottom: 1px solid #333; padding-bottom:5px; margin-bottom: 10px;">Mis Ventas (Mercado)</h3>
+            <div id="history-sales" style="background: #111; padding: 15px; border-radius: 4px; color: var(--text-main); font-size: 0.9rem; max-height: 200px; overflow-y: auto; margin-bottom: 20px;">
+                </div>
+
+            <button class="btn-secondary btn-close-popup" style="width: 100%;" data-i18n="closeBtn">Cerrar</button>
+        </div>
+    </div>
+
     <div id="config-popup" class="overlay">
         <div class="popup-box">
             <h2 data-i18n="configTitle">Configuracion</h2>
@@ -192,6 +209,7 @@
                         <button id="btn-user-menu-trigger" class="btn-secondary" style="padding: 8px 15px; font-size: 0.9rem; border-color: var(--primary-color); color: var(--primary-color);">Agente</button>
                         <div id="user-dropdown-content" class="dropdown-content">
                             <a href="#" id="btn-menu-profile" data-i18n="profileBtn">Mi Perfil</a>
+                            <a href="#" id="btn-menu-history" data-i18n="historyMenu">Historial</a>
                             <a href="#" id="btn-menu-discounts" data-i18n="discountsMenu">Mis Descuentos</a>
                             <a href="#" id="btn-menu-config" data-i18n="configBtn">Configuracion</a>
                             <hr style="border:0; border-top:1px solid #333; margin: 5px 0;">
@@ -256,8 +274,11 @@
         <footer>
             <div class="container">
                 <p>&copy; 2026 Tactical Reparations. Todos los derechos reservados.</p>
+                <p style="margin-top: 10px; font-size: 0.9rem; color: var(--text-muted);">
+                    Contacto: <span style="color: var(--primary-color); font-weight: bold;">639 12 75 28</span> | Email: <a href="mailto:tacticalreparations@gmail.com" style="color: var(--primary-color); text-decoration: none;">tacticalreparations@gmail.com</a>
+                </p>
                 <div style="margin-top: 15px;">
-                    <a href="#" id="link-footer-privacy" style="color: var(--primary-color); text-decoration: none; font-weight: bold; font-size: 0.9rem;" data-i18n="footerPrivacy">Protocolos de Privacidad y Terminos</a>
+                    <a href="#" id="link-footer-privacy" style="color: var(--text-muted); text-decoration: none; font-size: 0.9rem;" data-i18n="footerPrivacy">Protocolos de Privacidad y Terminos</a>
                 </div>
             </div>
         </footer>
