--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
 
     <div id="privacy-policy-popup" class="overlay">
         <div class="popup-box modal-box">
-            <h2 data-i18n="policyTitle">Politica de Privacidad, Cookies y Aviso Legal</h2>
+            <h2 data-i18n="privacyTitle">Politica de Privacidad, Cookies y Aviso Legal</h2>
             <div style="text-align: left; color: var(--text-muted); font-size: 0.95rem; line-height: 1.5;">
                 <h3 style="color: var(--primary-color);" data-i18n="policyLegalTitle">1. Aviso Legal</h3>
-                <p data-i18n="policyLegalText">Tactical Reparations es una plataforma virtual dedicada a la prestacion de servicios automotrices avanzados. Todos los derechos sobre la marca, el diseño y el contenido estan reservados.</p>
+                <p data-i18n="policyLegalText">Tactical Reparations es una plataforma virtual dedicada a la prestacion de servicios automotrices avanzados. Todos los derechos reservados.</p>
                 
                 <h3 style="color: var(--primary-color); margin-top: 15px;" data-i18n="policyDataTitle">2. Uso de Datos (Privacidad)</h3>
-                <p data-i18n="policyDataText">Recopilamos la informacion estrictamente necesaria para gestionar tu cuenta de Agente, procesar tus pedidos en el Mercado y ofrecer soporte tecnico. Tus credenciales se procesan y encriptan localmente de forma segura. En ningun caso compartimos ni vendemos tu informacion a terceros.</p>
+                <p data-i18n="policyDataText">Recopilamos la informacion estrictamente necesaria para gestionar tu cuenta de Agente, procesar tus pedidos y ofrecer soporte tecnico. Tus credenciales se procesan de forma segura. No vendemos informacion a terceros.</p>
                 
                 <h3 style="color: var(--primary-color); margin-top: 15px;" data-i18n="policyCookiesTitle">3. Politica de Cookies</h3>
-                <p data-i18n="policyCookiesText">Utilizamos cookies tecnicas y de sesion (Local Storage) que son indispensables para el funcionamiento de la web. Sirven para mantener tu inventario en el carrito, aplicar codigos de descuento, conservar tu historial de operaciones y recordar tus preferencias de idioma. No utilizamos rastreadores publicitarios externos. Al continuar usando la plataforma, aceptas este uso indispensable.</p>
+                <p data-i18n="policyCookiesText">Utilizamos cookies tecnicas y de sesion (Local Storage) indispensables para mantener tu inventario en el carrito, aplicar descuentos, conservar tu historial y recordar tu idioma. No usamos rastreadores publicitarios externos.</p>
             </div>
             <button class="btn-secondary btn-close-popup" data-i18n="closeBtn" style="margin-top: 20px;">Cerrar</button>
         </div>
@@ -323,7 +323,7 @@
             </div>
             <div id="chat-input-area">
                 <input type="text" id="chat-input" placeholder="..." data-i18n-placeholder="chatInput">
-                <button id="chat-send">ENVIAR</button>
+                <button id="chat-send" data-i18n="chatSendBtn">ENVIAR</button>
             </div>
         </div>
         <button id="chat-toggle" style="font-weight: bold; font-size: 14px;">CHAT</button>
