--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                 <button id="chat-send" data-i18n="chatSendBtn">ENVIAR</button>
             </div>
         </div>
-        <button id="chat-toggle" style="font-weight: bold; font-size: 14px;">CHAT</button>
+        <button id="chat-toggle" style="font-size: 28px;">💬</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
