--- a/reclamaciones.html
+++ b/reclamaciones.html
@@ -11,11 +11,7 @@
         .claims-box { background: var(--bg-panel); padding: 40px; border: 1px solid #333; border-radius: 8px; max-width: 600px; width: 100%; border-top: 4px solid var(--primary-color); -webkit-box-shadow: 0 10px 30px rgba(0,0,0,0.8); box-shadow: 0 10px 30px rgba(0,0,0,0.8); }
         .claims-box h1 { margin-bottom: 10px; color: var(--primary-color); }
         .claims-box p { color: var(--text-muted); margin-bottom: 25px; line-height: 1.5; }
-        
-        @media screen and (max-width: 900px) {
-            .claims-box { padding: 25px 15px; }
-            .claims-box h1 { font-size: 1.6rem; }
-        }
+        @media screen and (max-width: 900px) { .claims-box { padding: 25px 15px; } .claims-box h1 { font-size: 1.6rem; } }
     </style>
 </head>
 <body>
@@ -67,6 +63,14 @@
             <p style="margin-top: 10px; font-size: 0.9rem; color: var(--text-muted);">
                 <span data-i18n="footerContact">Contacto:</span> <span style="color: var(--primary-color); font-weight: bold;">639 12 75 28</span> | Email: <a href="mailto:tacticalreparations@gmail.com" style="color: var(--primary-color); text-decoration: none;">tacticalreparations@gmail.com</a>
             </p>
+            <div style="margin-top: 15px; display: flex; justify-content: center; align-items: center; gap: 8px;">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="var(--primary-color)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+                    <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+                    <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
+                </svg>
+                <a href="https://instagram.com/tacticalreparations" target="_blank" style="color: var(--primary-color); text-decoration: none; font-weight: bold;">@tacticalreparations</a>
+            </div>
         </div>
     </footer>
 
